fix tables 12-13 variable names

--- a/part2-cost-shifting/healthcare-spending.ipynb
+++ b/part2-cost-shifting/healthcare-spending.ipynb
@@ -22,6 +22,17 @@
       "\n",
       " Hlavac, Marek (2018). stargazer: Well-Formatted Regression and Summary Statistics Tables.\n",
       " R package version 5.2.2. https://CRAN.R-project.org/package=stargazer \n",
+      "\n",
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
       "\n"
      ]
     }
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -463,27 +474,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: 'dplyr'\n",
-      "\n",
-      "The following objects are masked from 'package:stats':\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate time lagged measuemrents\n",
     "# t-1 and t-2\n",
@@ -1750,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1763,28 +1756,28 @@
       "<tr><td></td><td colspan=\"8\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>Log(OOP)</td><td>Log(Curative)</td><td>Log(LTC)</td><td>Log(Prev)</td><td>Log(Pharm)</td><td>Log(Beds)</td><td>Log(Capital)</td><td>Log(Hospital Exp)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td><td>(6)</td><td>(7)</td><td>(8)</td></tr>\n",
-      "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">FR t-1</td><td>-0.089<sup>***</sup></td><td>-0.025<sup>*</sup></td><td>0.150<sup>**</sup></td><td>-0.268<sup>***</sup></td><td>-0.003</td><td>-0.009</td><td>0.009</td><td>-0.030</td></tr>\n",
+      "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">ER t-1</td><td>-0.089<sup>***</sup></td><td>-0.025<sup>*</sup></td><td>0.150<sup>**</sup></td><td>-0.268<sup>***</sup></td><td>-0.003</td><td>-0.009</td><td>0.009</td><td>-0.030</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.026)</td><td>(0.014)</td><td>(0.073)</td><td>(0.100)</td><td>(0.034)</td><td>(0.015)</td><td>(0.065)</td><td>(0.024)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(Debt)</td><td>-0.021</td><td>0.031<sup>**</sup></td><td>0.090</td><td>0.078</td><td>0.068<sup>*</sup></td><td>0.047<sup>***</sup></td><td>0.011</td><td>-0.025</td></tr>\n",
+      "<tr><td style=\"text-align:left\">BBR t-1</td><td>-0.021</td><td>0.031<sup>**</sup></td><td>0.090</td><td>0.078</td><td>0.068<sup>*</sup></td><td>0.047<sup>***</sup></td><td>0.011</td><td>-0.025</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.027)</td><td>(0.016)</td><td>(0.088)</td><td>(0.115)</td><td>(0.039)</td><td>(0.017)</td><td>(0.062)</td><td>(0.028)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(GDP)</td><td>0.026</td><td>-0.073<sup>***</sup></td><td>0.206<sup>*</sup></td><td>-0.427<sup>***</sup></td><td>0.052</td><td>-0.004</td><td>-0.473<sup>***</sup></td><td>-0.067<sup>**</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(Debt)</td><td>0.026</td><td>-0.073<sup>***</sup></td><td>0.206<sup>*</sup></td><td>-0.427<sup>***</sup></td><td>0.052</td><td>-0.004</td><td>-0.473<sup>***</sup></td><td>-0.067<sup>**</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.029)</td><td>(0.019)</td><td>(0.105)</td><td>(0.128)</td><td>(0.039)</td><td>(0.018)</td><td>(0.071)</td><td>(0.030)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(Population)</td><td>1.883<sup>***</sup></td><td>0.811<sup>***</sup></td><td>2.032<sup>***</sup></td><td>3.354<sup>***</sup></td><td>0.558<sup>***</sup></td><td>-0.019</td><td>2.048<sup>***</sup></td><td>1.017<sup>***</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(GDP)</td><td>1.883<sup>***</sup></td><td>0.811<sup>***</sup></td><td>2.032<sup>***</sup></td><td>3.354<sup>***</sup></td><td>0.558<sup>***</sup></td><td>-0.019</td><td>2.048<sup>***</sup></td><td>1.017<sup>***</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.118)</td><td>(0.081)</td><td>(0.384)</td><td>(0.493)</td><td>(0.163)</td><td>(0.059)</td><td>(0.288)</td><td>(0.125)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">Log(Pop 80 above)</td><td>-0.783<sup>***</sup></td><td>-0.329<sup>**</sup></td><td></td><td>-0.453</td><td>0.962<sup>***</sup></td><td></td><td>0.874</td><td>0.013</td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(Population)</td><td>-0.783<sup>***</sup></td><td>-0.329<sup>**</sup></td><td></td><td>-0.453</td><td>0.962<sup>***</sup></td><td></td><td>0.874</td><td>0.013</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.256)</td><td>(0.158)</td><td></td><td>(1.063)</td><td>(0.356)</td><td></td><td>(0.671)</td><td>(0.251)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">IMF bailout</td><td></td><td></td><td>0.245</td><td></td><td></td><td>0.044</td><td></td><td></td></tr>\n",
+      "<tr><td style=\"text-align:left\">Log(Pop 80 above)</td><td></td><td></td><td>0.245</td><td></td><td></td><td>0.044</td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.332)</td><td></td><td></td><td>(0.059)</td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">Left Gov</td><td>0.011</td><td>-0.044<sup>*</sup></td><td>-0.769<sup>***</sup></td><td>0.145</td><td>-0.061</td><td>0.015</td><td>-0.143</td><td>-0.149<sup>***</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">IMF bailout</td><td>0.011</td><td>-0.044<sup>*</sup></td><td>-0.769<sup>***</sup></td><td>0.145</td><td>-0.061</td><td>0.015</td><td>-0.143</td><td>-0.149<sup>***</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.047)</td><td>(0.023)</td><td>(0.119)</td><td>(0.173)</td><td>(0.064)</td><td>(0.023)</td><td>(0.111)</td><td>(0.038)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">gov_left</td><td></td><td></td><td></td><td>0.001</td><td></td><td></td><td></td><td></td></tr>\n",
+      "<tr><td style=\"text-align:left\">Left Gov</td><td></td><td></td><td></td><td>0.001</td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td>(0.001)</td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">Observations</td><td>703</td><td>466</td><td>480</td><td>481</td><td>600</td><td>631</td><td>515</td><td>425</td></tr>\n",
@@ -1819,14 +1812,14 @@
     "          title=\"Table 12 - ER+BBR - Time Lag 1 Year\",\n",
     "          dep.var.labels=c(\"Log(OOP)\", \"Log(Curative)\", \"Log(LTC)\", \"Log(Prev)\", \"Log(Pharm)\", \"Log(Beds)\",\n",
     "                           \"Log(Capital)\", \"Log(Hospital Exp)\"),\n",
-    "          covariate.labels=c(\"FR t-1\", \"log(Debt)\", \"log(GDP)\", \"log(Population)\", \"Log(Pop 80 above)\",\n",
+    "          covariate.labels=c(\"ER t-1\", \"BBR t-1\", \"log(Debt)\", \"log(GDP)\", \"log(Population)\", \"Log(Pop 80 above)\",\n",
     "                             \"IMF bailout\", \"Left Gov\"),\n",
     "          out=\"output/table12-erbbrlag1.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1839,28 +1832,28 @@
       "<tr><td></td><td colspan=\"8\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>Log(OOP)</td><td>Log(Curative)</td><td>Log(LTC)</td><td>Log(Prev)</td><td>Log(Pharm)</td><td>Log(Beds)</td><td>Log(Capital)</td><td>Log(Hospital Exp)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td><td>(6)</td><td>(7)</td><td>(8)</td></tr>\n",
-      "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">FR t-2</td><td>-0.065<sup>***</sup></td><td>-0.035<sup>**</sup></td><td>0.087</td><td>-0.389<sup>***</sup></td><td>-0.040</td><td>-0.019</td><td>0.034</td><td>-0.051<sup>**</sup></td></tr>\n",
+      "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">ER t-2</td><td>-0.065<sup>***</sup></td><td>-0.035<sup>**</sup></td><td>0.087</td><td>-0.389<sup>***</sup></td><td>-0.040</td><td>-0.019</td><td>0.034</td><td>-0.051<sup>**</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.025)</td><td>(0.014)</td><td>(0.075)</td><td>(0.102)</td><td>(0.035)</td><td>(0.015)</td><td>(0.067)</td><td>(0.024)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(Debt)</td><td>-0.029</td><td>0.022</td><td>0.039</td><td>-0.019</td><td>0.055</td><td>0.050<sup>***</sup></td><td>-0.010</td><td>-0.017</td></tr>\n",
+      "<tr><td style=\"text-align:left\">BBR t-2</td><td>-0.029</td><td>0.022</td><td>0.039</td><td>-0.019</td><td>0.055</td><td>0.050<sup>***</sup></td><td>-0.010</td><td>-0.017</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.026)</td><td>(0.016)</td><td>(0.087)</td><td>(0.113)</td><td>(0.040)</td><td>(0.017)</td><td>(0.063)</td><td>(0.028)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(GDP)</td><td>0.050<sup>*</sup></td><td>-0.070<sup>***</sup></td><td>0.200<sup>*</sup></td><td>-0.416<sup>***</sup></td><td>0.050</td><td>-0.005</td><td>-0.461<sup>***</sup></td><td>-0.067<sup>**</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(Debt)</td><td>0.050<sup>*</sup></td><td>-0.070<sup>***</sup></td><td>0.200<sup>*</sup></td><td>-0.416<sup>***</sup></td><td>0.050</td><td>-0.005</td><td>-0.461<sup>***</sup></td><td>-0.067<sup>**</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.028)</td><td>(0.019)</td><td>(0.106)</td><td>(0.129)</td><td>(0.040)</td><td>(0.018)</td><td>(0.073)</td><td>(0.030)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">log(Population)</td><td>1.877<sup>***</sup></td><td>0.810<sup>***</sup></td><td>2.077<sup>***</sup></td><td>3.418<sup>***</sup></td><td>0.551<sup>***</sup></td><td>-0.020</td><td>2.058<sup>***</sup></td><td>0.993<sup>***</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(GDP)</td><td>1.877<sup>***</sup></td><td>0.810<sup>***</sup></td><td>2.077<sup>***</sup></td><td>3.418<sup>***</sup></td><td>0.551<sup>***</sup></td><td>-0.020</td><td>2.058<sup>***</sup></td><td>0.993<sup>***</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.113)</td><td>(0.080)</td><td>(0.386)</td><td>(0.488)</td><td>(0.164)</td><td>(0.059)</td><td>(0.291)</td><td>(0.124)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">Log(Pop 80 above)</td><td>-0.811<sup>***</sup></td><td>-0.286<sup>*</sup></td><td></td><td>-0.411</td><td>1.013<sup>***</sup></td><td></td><td>0.853</td><td>0.011</td></tr>\n",
+      "<tr><td style=\"text-align:left\">log(Population)</td><td>-0.811<sup>***</sup></td><td>-0.286<sup>*</sup></td><td></td><td>-0.411</td><td>1.013<sup>***</sup></td><td></td><td>0.853</td><td>0.011</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.248)</td><td>(0.159)</td><td></td><td>(1.067)</td><td>(0.363)</td><td></td><td>(0.687)</td><td>(0.249)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">IMF bailout</td><td></td><td></td><td>0.305</td><td></td><td></td><td>0.059</td><td></td><td></td></tr>\n",
+      "<tr><td style=\"text-align:left\">Log(Pop 80 above)</td><td></td><td></td><td>0.305</td><td></td><td></td><td>0.059</td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.336)</td><td></td><td></td><td>(0.059)</td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">Left Gov</td><td>0.002</td><td>-0.044<sup>*</sup></td><td>-0.753<sup>***</sup></td><td>0.158</td><td>-0.056</td><td>0.015</td><td>-0.141</td><td>-0.152<sup>***</sup></td></tr>\n",
+      "<tr><td style=\"text-align:left\">IMF bailout</td><td>0.002</td><td>-0.044<sup>*</sup></td><td>-0.753<sup>***</sup></td><td>0.158</td><td>-0.056</td><td>0.015</td><td>-0.141</td><td>-0.152<sup>***</sup></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td>(0.045)</td><td>(0.023)</td><td>(0.119)</td><td>(0.172)</td><td>(0.065)</td><td>(0.023)</td><td>(0.111)</td><td>(0.038)</td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
-      "<tr><td style=\"text-align:left\">gov_left</td><td></td><td></td><td></td><td>0.001</td><td></td><td></td><td></td><td></td></tr>\n",
+      "<tr><td style=\"text-align:left\">Left Gov</td><td></td><td></td><td></td><td>0.001</td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td>(0.001)</td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>\n",
       "<tr><td colspan=\"9\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">Observations</td><td>693</td><td>464</td><td>478</td><td>478</td><td>590</td><td>627</td><td>507</td><td>424</td></tr>\n",
@@ -1895,7 +1888,7 @@
     "          title=\"Table 13 - ER+BBR - Time Lag 2 Years\",\n",
     "          dep.var.labels=c(\"Log(OOP)\", \"Log(Curative)\", \"Log(LTC)\", \"Log(Prev)\", \"Log(Pharm)\", \"Log(Beds)\",\n",
     "                           \"Log(Capital)\", \"Log(Hospital Exp)\"),\n",
-    "          covariate.labels=c(\"FR t-2\", \"log(Debt)\", \"log(GDP)\", \"log(Population)\", \"Log(Pop 80 above)\",\n",
+    "          covariate.labels=c(\"ER t-2\", \"BBR t-2\", \"log(Debt)\", \"log(GDP)\", \"log(Population)\", \"Log(Pop 80 above)\",\n",
     "                             \"IMF bailout\", \"Left Gov\"),\n",
     "          out=\"output/table13-erbbrlag2.html\")"
    ]
